<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_enter_number">Enter number</string>
    <string name="label_ten_percent">10%</string>
    <string name="label_fifteen_percent">15%</string>
    <string name="label_twenty_percent">20%</string>
    <string name="label_hint_enter_number">(please enter number)</string>
    <string name="label_tips">"Tips: "</string>
    <string name="label_percentage">"Current percentage: "</string>
    <string name="label_not_choose_yet">Not choose yet</string>

</resources>
