<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tipcalculator.TipCalculatorActivity" >

    <Button
        android:id="@+id/btn20"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn15"
        android:layout_toRightOf="@+id/btn15"
        android:onClick="calculateTip"
        android:text="@string/label_twenty_percent" />

    <TextView
        android:id="@+id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/labelTips"
        android:layout_alignBottom="@+id/labelTips"
        android:layout_centerHorizontal="true"
        android:hint="@string/label_hint_enter_number" />

    <EditText
        android:id="@+id/etInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn10"
        android:layout_alignLeft="@+id/btn10"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/hint_enter_number"
        android:inputType="number" />

    <Button
        android:id="@+id/btn10"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="14dp"
        android:layout_toLeftOf="@+id/tvTips"
        android:onClick="calculateTip"
        android:text="@string/label_ten_percent" />

    <Button
        android:id="@+id/btn15"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/labelTips"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/labelTips"
        android:onClick="calculateTip"
        android:text="@string/label_fifteen_percent" />

    <TextView
        android:id="@+id/labelTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn10"
        android:layout_below="@+id/btn10"
        android:layout_marginTop="32dp"
        android:text="@string/label_tips" />

    <TextView
        android:id="@+id/tvPercentageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTips"
        android:layout_alignLeft="@+id/labelTips"
        android:text="@string/label_percentage" />

    <TextView
        android:id="@+id/tvPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvTips"
        android:layout_toRightOf="@+id/tvPercentageLabel"
        android:hint="@string/label_not_choose_yet" />

</RelativeLayout>
